--- a/upgrading/1.1.rst
+++ b/upgrading/1.1.rst
@@ -3,6 +3,7 @@ Upgrading to 1.1
 
 The most visible change is the way you write tests. With 1.0, you were able to access a ``.test`` property from any casper script and so running a suite using the standard ``casperjs`` executable::
 
+    // 1.0 style test script not using the `casperjs test` subcommand
     var casper = require('casper').create();
 
     casper.start('http://foo.bar/', function() {
@@ -16,7 +17,7 @@ The most visible change is the way you write tests. With 1.0, you were able to a
 
 In 1.1, the test framework has been heavily refactored to decouple the tester from a casper instance as much as possible, so it's no more possible to run a test suite right from the standard ``casperjs`` command as you would have done with the script shown above.
 
-Instead you now have to use the ``casperjs test`` subcommand mandatorily to access a tester instance from the ``casper.test`` property.
+Instead you now have to use the :doc:`casperjs test <../testing>` subcommand mandatorily to access a tester instance from the ``casper.test`` property.
 
 .. warning::
 
@@ -42,7 +43,7 @@ Instead you now have to use the ``casperjs test`` subcommand mandatorily to acce
 The new ``Tester#begin()`` method
 ---------------------------------
 
-However, a new ``begin()`` method as been added to the ``Tester`` prototype, to ease describing your tests::
+However, a new :ref:`begin() <tester_begin>` method as been added to the :ref:`Tester <tester_module>` prototype, to ease describing your tests::
 
     casper.test.begin('Description of my test', 1, function(test) {
         test.assert(true);
